--- a/servidor/pagina/templates/cabecera.html
+++ b/servidor/pagina/templates/cabecera.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.css'%}">
     <link rel="stylesheet" href="{% static 'assets/css/app.css'%}">
     <link rel="shortcut icon" href="{% static 'assets/images/ARMLOGO.png'%}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'assets/css/alerta.css'%}">
+
 </head>
 
 <body>
@@ -78,6 +80,18 @@
                     </li>
                 </ul>
             </div>
+          
         </nav>
+ 
+        <script src="{% static 'assets/js/feather-icons/feather.min.js'%}"></script>
+        <script src="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js'%}"></script>
+        <script src="{% static 'assets/js/app.js'%}"></script>
+        <script src="{% static 'assets/vendors/chartjs/Chart.min.js'%}"></script>
+        <script src="{% static 'assets/vendors/apexcharts/apexcharts.min.js'%}"></script>
+        <script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
+ 
+
+
+        <script src="{% static 'assets/js/main.js'%}"></script>
         {%block cabecera%}
         {%endblock%}
