cada dia mas peepoclown

--- a/servidor/pagina/templates/cargar_cliente.html
+++ b/servidor/pagina/templates/cargar_cliente.html
@@ -32,12 +32,14 @@
             </div>
         </div>
         
-        <button onclick="notifySuccess()" class="guardar-producto"  type="submit">
+        <button class="guardar-producto1" onclick="notifySuccess()"  type="submit">
                 Guardar cliente
         </button>
         <div id="notification-area">
+            
         </div>
     </footer>
+    
 </form>
     <div class="card-body" style="overflow-y:auto">
                 <table class="table table-striped dataTable-table" id="tabla">
