--- a/servidor/pagina/static/assets/css/alerta.css
+++ b/servidor/pagina/static/assets/css/alerta.css
@@ -1,15 +1,15 @@
 #notification-area {
-    position:fixed;
-    top:-600px;
-    right:1050px;
+    position: absolute;
+    top:65px;
+    right:1000px;
     width:250px;
-    height:100vh;
+    height:8%;
     display:flex;
     flex-direction:column;
     justify-content:flex-end;
   }
   #notification-area .notification {
-    position:relative;
+    position: absolute;
     padding:15px 10px;
     background:#111;
     color:#f5f5f5;
