--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1540,6 +1540,18 @@ footer div{
   border: 2px solid #2d3645;
   border-radius: 6px;
 }
+.guardar-producto1{
+  position:absolute;
+  left: 89%;
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+}
+.guardar-producto1:hover {
+  background-color: #008CBA;
+  color: white;
+}
 .guardar-producto:hover {
   background-color: #008CBA;
   color: white;
