--- a/servidor/pagina/templates/cabecera.html
+++ b/servidor/pagina/templates/cabecera.html
@@ -73,9 +73,9 @@
                             <div class="d-none d-md-block d-lg-inline-block">Hola, {{nombre_completo}}</div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="modusuarios/0"><i data-feather="settings"></i> Configuración</a>
+                            <a class="dropdown-item" href="{% url 'modusuarios' 0 %}"><i data-feather="settings"></i> Configuración</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
+                            <a class="dropdown-item" href="{% url 'login'  %}"><i data-feather="log-out"></i>Cerrar sesión</a>
                         </div>
                     </li>
                 </ul>
