--- a/servidor/pagina/static/assets/css/alerta.css
+++ b/servidor/pagina/static/assets/css/alerta.css
@@ -1,39 +1,38 @@
 #notification-area {
-    position: absolute;
-    top:65px;
-    right:1000px;
-    width:250px;
-    height:8%;
-    display:flex;
-    flex-direction:column;
-    justify-content:flex-end;
+  position:fixed;
+  top:0px;
+  right:10px;
+  width:250px;
+  height:auto;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-end;
+}
+#notification-area .notification {
+  position:fixed;
+  top:0px;
+  right:10px;
+  width:250px;
+  height:auto;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-end;
+  color: white;
+  padding: 1em;
+  margin-top: 1em;
+}
+@keyframes showNotification {
+  to {
+    opacity:1;
+    left:0px;
   }
-  #notification-area .notification {
-    position: absolute;
-    padding:15px 10px;
-    background:#111;
-    color:#f5f5f5;
-    font-family:"Raleway";
-    font-size:14px;
-    font-weight:600;
-    border-radius:5px;
-    margin:5px 0px;
-    opacity:0;
-    left:20px;
-    animation:showNotification 1ms ease-in-out forwards;
-  }
-  @keyframes showNotification {
-    to {
-      opacity:100;
-      left:10px;
-    }
-  }
-  #notification-area .notification.success {
-    background:#389838;
-  }
-  #notification-area .notification.error {
-    background:orangered;
-  }
-  #notification-area .notification.info {
-    background:#00acee;
-  }
+}
+#notification-area .notification.success {
+  background:#389838;
+}
+#notification-area .notification.error {
+  background:orangered;
+}
+#notification-area .notification.info {
+  background:#00acee;
+}
