--- a/servidor/pagina/templates/cargar_proveedor.html
+++ b/servidor/pagina/templates/cargar_proveedor.html
@@ -1,7 +1,7 @@
 {%extends 'cabecera.html'%}
 {% load static %}
 {%block cabecera%}
-    <form action="{% url 'cargar_proveedor' proveedor_actual %}" method="POST">
+    <form action="{% url 'cargar_proveedor' proveedor_actual %}" onsubmit="notifySuccess(this); return false" method="POST">
         {% csrf_token %}
         <div class="forma">
             <label for="ingresar-codigo">Nombre completo</label>
