Traer al label el cliente y la cantidad de productos

--- a/servidor/pagina/templates/Menu.html
+++ b/servidor/pagina/templates/Menu.html
@@ -138,10 +138,10 @@
     else if (window.location.pathname == '/pagina/vender'){
         sidebar4.className += ' active'
     }
-    else if (window.location.pathname == '/pagina/cargarproveedor'){
+    else if (window.location.pathname == '/pagina/cargar_proveedor/0'){
         sidebar5.className += ' active'
     }
-    else if (window.location.pathname == '/pagina/cargar_cliente'){
+    else if (window.location.pathname == '/pagina/cargar_compra'){
         sidebar6.className += ' active'
     }
 </script>
