--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1656,6 +1656,52 @@ left: 75%;
 top:70%;
 font-weight: bold;
 }
+.retirar-dinero{
+  position:relative;
+  left: 6;
+  top:5;
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+}
+.retirar-dinero:hover{
+  background-color: #da0000;
+  color: white;
+}
+.apertura-caja{
+  position:relative;
+  left: 80%;
+  top:5;
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+}
+.apertura-caja:hover{
+  background-color: #24da00;
+  color: white;
+}
+.abrir-caja{
+  position:relative;
+  left: 50%;
+  top: 100;
+  width: 10%;
+  height: 5%;
+  bottom: 15;
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+  text-align: center;
+}
+.abrir-caja:hover{
+  background-color: #24da00;
+  color: white;
+}
 
-
-
+.abrir-caja-input{
+    position: absolute;
+    top: 150;
+    left: 400;
+}
