--- a/servidor/pagina/templates/punto_venta.html
+++ b/servidor/pagina/templates/punto_venta.html
@@ -47,10 +47,8 @@
     <div class="clientept">
         <div>
             <label for="ingresar-nombre">Cedula de cliente </label>
-            <input type="text" class="clienteptex" id="cedula" onfocusout="traerCliente(this)">
-            {%for lista in listaclientes%}
-            <td>{{lista.codigo_cliente}}</td>
-            {%endfor%}
+            <input type="text" class="clienteptex"  onfocusout="traerCliente(this)">
+          
 
         </div>
         <div class="forma">
@@ -63,9 +61,6 @@
     <div class="clientept">
         <label for="ingresar-nombre" id="nombre_cliente">Nombre del Cliente: </label>
 
-        {%for lista in listaclientes%}
-        <td>{{lista.nombre_cliente}}</td>
-        {%endfor%}
     </div>
     <div class="busqueda">
         <div>
