--- a/servidor/pagina/templates/retirar_caja.html
+++ b/servidor/pagina/templates/retirar_caja.html
@@ -6,7 +6,7 @@
     <div class="forma">
         <label for="ingresar-codigo">Ingresar monto no superior al actual: </label> 
         <input type="text" class="form-control" id="formGroupExampleInput2" >
-        <label for="ingresar-codigo">Ingresar motivo</label>
+        <label for="ingresar-codigo">Ingresar motivo(max 50 caract.)</label>
         <input type="text" class="form-control" id="formGroupExampleInput2" >
    
         <button class="guardar-producto1" onclick=""  type="submit"> 
