--- a/servidor/pagina/templates/caja.html
+++ b/servidor/pagina/templates/caja.html
@@ -1,43 +1,65 @@
 {%extends 'cabecera.html'%}
 {% load static %}
 {%block cabecera%}
-<form>  
-<div>
+<form>
     <div>
-        <a href="{%url 'retirar_caja' %}" >
-            <button class="retirar-dinero">
-                Retirar dinero
-            </button}>
-        </a>
-        <a href="{%url 'apertura_caja' %}">
-            <button class="apertura-caja">
-                apertura de caja
-            </button}>
-        </a>
-    
-    </div>
-    <div>
-        <table class="table table-striped dataTable-table" id="tabla">
-            <thead>
-                <tr> 
-                    <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                    class="dataTable-sorter">Usuario</a></th>
-                    <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                        class="dataTable-sorter">Fecha</a></th>
-                        <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                            class="dataTable-sorter">Hora</a></th>
-                   
-                    <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                        class="dataTable-sorter">Motivo</a></th>
-                    <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                        class="dataTable-sorter">Entrada</a></th>
-                        <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                            class="dataTable-sorter">Salida</a></th>
-                </tr>
-            </thead>
+        <div>
+            <a href="{%url 'retirar_caja' 0  %}">
+                <button class="retirar-dinero">
+                    Retirar dinero
+                </button}>
+            </a>
+            <a href="{%url 'apertura_caja' %}">
+                <button class="apertura-caja">
+                    apertura de caja
+                    </button}>
+            </a>
 
-        </table>
-    </div>  
-</div>
+        </div>
+        <div>
+            <table class="table table-striped dataTable-table" id="tabla">
+                <thead>
+                    <tr>
+                        <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Usuario</a>
+                        </th>
+                        <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Fecha</a>
+                        </th>
+                        <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Hora</a></th>
+
+                        <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Motivo</a>
+                        </th>
+                        <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Entrada</a>
+                        </th>
+                        <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Salida</a>
+                        </th>
+                    </tr>
+                </thead>
+                {%for lista in listacaja %}
+                    <tr>
+                        
+                        {%for usuario in listausuario %}
+                        {%if usuario.cod_usuario == lista.nombre_usuario_id%}
+                        <td>{{usuario.nombre_usuario}}</td>
+                        {%endif%}
+                        {%endfor%}
+                        <td>{{lista.fecha_caja}}</td>
+                        <td>{{lista.hora_caja}}</td>
+                        <td>{{lista.motivo_caja}}</td>
+                        {% if lista.entrada_caja == null %}
+                        <td>--------</td>
+                        {% else %}
+                        <td>{{lista.entrada_caja}}</td>
+                        {% endif %}
+                        <td>{{lista.salida_caja}}</td>
+                    </tr> 
+
+                {%endfor%} 
+                           
+               
+            </table>
+
+
+        </div>
+    </div>
 </form>
 {%endblock%}
