--- a/servidor/pagina/templates/retirar_caja.html
+++ b/servidor/pagina/templates/retirar_caja.html
@@ -19,7 +19,7 @@
 
         <input type="date" id="fechaActual" name="fecha_caja" value="{{datos_act.fecha_caja}}" style="visibility: hidden;">
         <input type="text" id="currentTime"  name="hora_caja" value="{{datos_act.hora_caja}}" style="visibility: hidden;">
-
+        <input style="display: none;" name="tipo_mov" value="1" type="number">
         <a >
             <button  class="guardar-producto1" type="submit"> 
                 Retirar dinero
