--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1705,3 +1705,23 @@ font-weight: bold;
     top: 150;
     left: 400;
 }
+
+.añadir-categoria{
+  position: relative;
+  top:-210;
+  left: 180px;
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+  padding: 0 0.6rem;
+}
+  
+
+
+
+.añadir-categoria:hover{
+  background-color: #008CBA;
+  color: white;
+
+}
