--- a/servidor/pagina/templates/cargar_categoria.html
+++ b/servidor/pagina/templates/cargar_categoria.html
@@ -1,39 +1,38 @@
 {%extends 'cabecera.html'%}
 {% load static %}
 {%block cabecera%}
-    <form action="{% url 'cargar_proveedor' proveedor_actual %}" onsubmit="notifySuccess(this); return false" method="POST">
+    
+        <a href="{%url 'editproducto' 0 %}">
+            <button class="agregar_producto">
+                <i class="fas fa-arrow-circle-left"></i>
+            </button>
+        </a>
+
+    
+    <form action="{% url 'cargar_categoria' categoria_actual %}" onsubmit="notifySuccess(this); return false" method="POST">
         {% csrf_token %}
         <div class="forma">
-            <label for="ingresar-codigo">Nombre completo</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" name="nombre_proveedor"
-                value="{{datos_act.nombre_proveedor}}">
+            <label for="ingresar-codigo">Nombre categoria</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" name="nombre_categoria"
+                value="{{datos_act.nombre_categoria}}">
 
-            <label for="ingresar-precio-compra">Ruc</label>
-            <input type="text" class="form-control" id="formGroupExampleInput4" name="ruc_proveedor"
-                value="{{datos_act.ruc_proveedor}}">
 
-            <label for="ingresar-cantidad">Telefono</label>
-            <input type="text" class="form-control" id="formGroupExampleInput5" name="Telefono_proveedor"
-                value="{{datos_act.Telefono_proveedor}}">
-
-            <label for="ingresar-cantidad">Direccion</label>
-            <input type="text" class="form-control" id="formGroupExampleInput5" name="direccion_proveedor"
-                value="{{datos_act.direccion_proveedor}}">
 
 
         </div>
         <footer>
             <div class="busqueda">
                 <div>
-                    <label for="ingresar-nombre">Buscar provedor </label>
+                    <label for="ingresar-nombre">Buscar categoria </label>
                     <input type="text" class="clienteptex" id="buscar"> <!-- ID de "buscar" para realizar busqueda-->
                 </div>
             </div>
             <div class="footer clearfix mb-0 text-muted">
-
+            <a> 
                 <button class="guardar-producto" type="submit" onclick="checker()">
-                    Guardar  proveedor
+                    Guardar  categoria
                 </button>
+            </a>
 
             </div>
         </footer>
@@ -50,34 +49,23 @@
                                         class="dataTable-sorter">Nombre</a></th>
                                 <th data-sortable="" style="width: 23.2012%;"><a href="#"
                                         class="dataTable-sorter">Codigo</a></th>
-                                <th data-sortable="" style="width: 20.8988%;"><a href="#"
-                                        class="dataTable-sorter">RUC</a></th>
-                                <th data-sortable="" style="width: 22.1386%;"><a href="#"
-                                        class="dataTable-sorter">Telefono</a></th>
-                                <th data-sortable="" style="width: 22.1386%;"><a href="#"
-                                        class="dataTable-sorter">Direccion</a></th>
-                                <th data-sortable="" style="width: 22.1386%;"><a href="#"
-                                        class="dataTable-sorter">Acciones</a></th>
-                            </tr>
 
                         </thead>
 
-                        {%for lista in listaproveedor%}
+                        {%for lista in listacategoria%}
                             <tr>
 
-                                <td>{{lista.nombre_proveedor}}</td>
-                                <td>{{lista.codigo_proveedor}}</td>
-                                <td>{{lista.ruc_proveedor}}</td>
-                                <td>{{lista.Telefono_proveedor}}</td>
-                                <td>{{lista.direccion_proveedor}}</td>
+                                <td>{{lista.nombre_categoria}}</td>
+                                <td>{{lista.codigo_categoria}}</td>
+
 
                                 <td data-sortable="" style="width:11.125%;"><a
-                                        href="{%url 'cargar_proveedor' lista.codigo_proveedor%}"
+                                        href="{%url 'cargar_categoria' lista.codigo_categoria%}"
                                         class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
                                         data-original-title="Editar usuario">
                                         <i class="fas fa-edit"></i>
                                     </a>
-                                    <a href="{% url 'borrarproveedor' lista.codigo_proveedor %}"
+                                    <a href="{% url 'borrarcategoria' lista.codigo_categoria %}"
                                     onclick="return confirm('Estas seguro que quieres borrar este proveedor');"
                                         class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
                                         data-original-title="borrar registro"><i class="fas fa-trash"></i></a>
