Parameters en cliente

--- a/servidor/pagina/templates/cabecera.html
+++ b/servidor/pagina/templates/cabecera.html
@@ -75,7 +75,7 @@
                         <div class="dropdown-menu dropdown-menu-right">
                             <a class="dropdown-item" href="{% url 'modusuarios' 0 %}"><i data-feather="settings"></i> Configuración</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'login'  %}"><i data-feather="log-out"></i>Cerrar sesión</a>
+                            <a class="dropdown-item" href="{% url 'salir'  %}"><i data-feather="log-out"></i>Cerrar sesión</a>
                         </div>
                     </li>
                 </ul>
