--- a/servidor/pagina/static/assets/css/app.css
+++ b/servidor/pagina/static/assets/css/app.css
@@ -1671,7 +1671,7 @@ font-weight: bold;
 }
 .apertura-caja{
   position:relative;
-  left: 80%;
+  left: 74%;
   top:5;
   color: #0d6efd;
   background: transparent;
@@ -1722,6 +1722,22 @@ font-weight: bold;
 
 .añadir-categoria:hover{
   background-color: #008CBA;
+  color: white;
+
+}
+.cerrar-caja{
+  position: relative;
+  left: 400;
+  top:5;
+  color: #0d6efd;
+  background: transparent;
+  border: 2px solid #2d3645;
+  border-radius: 6px;
+
+
+}
+.cerrar-caja:hover{
+  background-color: #08fc00;
   color: white;
 
 }
