--- a/servidor/pagina/templates/cargar_cliente.html
+++ b/servidor/pagina/templates/cargar_cliente.html
@@ -1,26 +1,26 @@
 {%extends 'cabecera.html'%}
 {% load static %}
 {%block cabecera%}
-<form action="{% url 'editclientes' cliente_actual %}" id="formCliente" onsubmit="notifySuccess(this); return false" method="POST">
+<form action="{% url 'editclientes' parameters.cliente_actual %}" id="formCliente" onsubmit="notifySuccess(this); return false" method="POST">
     {% csrf_token %}
     <div class="forma">
         <label for="ingresar-nombre">Numero de cedula</label>
         <input type="text" class="form-control" id="formGroupExampleInput1" name="codigo_cliente"
-            value="{{datos_act.codigo_cliente}}">
+            value="{{parameters.datos_act.codigo_cliente}}">
 
 
         <label for="ingresar-nombre">Nombre completo</label>
         <input type="text" class="form-control" id="formGroupExampleInput1" name="nombre_cliente"
-            value="{{datos_act.nombre_cliente}}">
+            value="{{parameters.datos_act.nombre_cliente}}">
 
 
         <label for="ingresar-codigo">Número de telefono</label>
         <input type="text" class="form-control" id="formGroupExampleInput2" name="telefonos_cliente"
-            value="{{datos_act.telefono_cliente}}">
+            value="{{parameters.datos_act.telefono_cliente}}">
 
         <label for="ingresar-precio-compra">Direccion</label>
         <input type="text" class="form-control" id="formGroupExampleInput3" name="direccion_cliente"
-            value="{{datos_act.direccion_cliente}}">
+            value="{{parameters.datos_act.direccion_cliente}}">
 
     </div>
     <footer>
@@ -54,7 +54,7 @@
                         </tr>
                     </thead>
 
-                    {%for lista in listaclientes%}
+                    {%for lista in parameters.listaclientes%}
                     <tr>
 
                         <td>{{lista.codigo_cliente}}</td>
