--- a/servidor/pagina/templates/caja.html
+++ b/servidor/pagina/templates/caja.html
@@ -1,7 +1,7 @@
 {%extends 'cabecera.html'%}
 {% load static %}
 {%block cabecera%}
-<form>
+<body>
     <div>
         <div>
             <a href="{%url 'retirar_caja' 0  %}">
@@ -9,11 +9,27 @@
                     Retirar dinero
                 </button}>
             </a>
-            <a href="">
-                <button class="cerrar-caja">
-                    cerrar caja
-                </button}>
+            <a>
+                <form class="abrir-caja-input"  action="{% url 'cerrar_caja' caja_actual %}" id="formCliente" method="POST">  
+                            {% csrf_token %} 
+                            <input style="display: none;" name="nombredelusuario" value="{{nombre_completo}}">
+                            <input  type="text" class="clienteptex" name="entrada_caja" value="{{datos_act.entrada_caja}}" style="display: none;"> 
+                            {% for lista in listausuario %}
+                            <input value="{{lista.cod_usuario}}" {% if lista.cod_usuario == datos_act.nombre_usuario_id%} {{lista.nombre_usuario}} {% endif %} style="visibility: hidden;">
+                            </input>
+                            {% endfor %}
+                            <input type="text" class="form-control" id="formGroupExampleInput2" name="total_caja" value="{{datos_act.total_caja}}"style="display: none;">
+                            <input type="date" id="fechaActual" name="fecha_caja" value="{{datos_act.fecha_caja}}" style="display: none;">
+                            <input type="text" id="currentTime"  name="hora_caja" value="{{datos_act.hora_caja}}" style="display: none;">
+                            <input style="display: none;" name="tipo_mov" value="2" type="number">
+                        <button class="cerrar-caja" onclick="checker()"  type="submit"> 
+                            cerrar caja
+                        </button>
+                </form>
             </a>
+            
+     
+          
             <a href="{%url 'abrir_caja' 0 %}">
                 <button class="apertura-caja">
                     apertura de caja
@@ -21,8 +37,9 @@
             </a>
 
         </div>
+        
         <div>
-            <table class="table table-striped dataTable-table" id="tabla">
+            <table class="table table-striped dataTable-table" id="tabla" style="overflow-y: scroll;">
                 <thead>
                     <tr>
                         <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Usuario</a>
@@ -39,9 +56,10 @@
                         </th>
                         <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Salida</a>
                         </th>
+                       
                     </tr>
                 </thead>
-                {%for lista in listacaja %}
+                {%for lista in listatabla %}
                     <tr>
                         
                         {%for usuario in listausuario %}
@@ -58,7 +76,7 @@
                         {% endif %}
                         {%if lista.tipo_mov == 1 %}<td>Retirar</td>{% endif %} 
                         {%if lista.tipo_mov == 2 %}<td>Apertura</td>{% endif %}
-                        {%if lista.tipo_mov == 3 %}<td>Venta</td>{% endif %}
+                        {%if lista.tipo_mov == 3 %}<td>cierre</td>{% endif %}
                         {% if lista.entrada_caja == null %}
                         <td>--------</td>
                         {% else %}
@@ -78,6 +96,36 @@
 
 
         </div>
+        <th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Total:</a>
+        </th>
     </div>
-</form>
+</body>
+<script>
+    window.onload = function () {
+        var fecha = new Date(); //Fecha actual
+        var mes = fecha.getMonth() + 1; //obteniendo mes
+        var dia = fecha.getDate(); //obteniendo dia
+        var ano = fecha.getFullYear(); //obteniendo año
+        if (dia < 10)
+            dia = '0' + dia; //agrega cero si el menor de 10
+        if (mes < 10)
+            mes = '0' + mes //agrega cero si el menor de 10
+        document.getElementById('fechaActual').value = ano + "-" + mes + "-" + dia;
+    } 
+</script>
+ 
+<script>
+    var today = new Date();
+    var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+    document.getElementById("currentTime").value = time;
+</script>
+<script>
+    function checker() {
+        var result = confirm('Estas seguro que quieres cerrar la caja?');
+        if (result == false) {
+            event.preventDefault();
+        }
+    }
+</script>
+
 {%endblock%}
