--- a/servidor/pagina/templates/punto_venta.html
+++ b/servidor/pagina/templates/punto_venta.html
@@ -45,7 +45,12 @@
 <form>
 
     <div class="clientept">
-        
+        <div>
+            <label for="ingresar-nombre">Cedula de cliente </label>
+            <input type="text" class="clienteptex"  onfocusout="traerCliente(this)">
+          
+
+        </div>
         <div class="forma">
             <label><input type="checkbox" id="cbox1" value="first_checkbox"> Cliente casual</label>
 
